# Infernus-V2

./: .gitignore  CMakeLists.txt  Infernus.sln  LocalPlayer.rcnet  Packets.rcnet  README.md
Infernus/: Infernus.cpp  Infernus.vcxproj  Infernus.vcxproj.filters
Infernus/Client/: ClientManager.cpp  ClientManager.h
Infernus/Client/Commands/: ColorCommand.cpp  ColorCommand.h  SpamCommand.cpp  SpamCommand.h  SpeedCommand.cpp  SpeedCommand.h  TeleportCommand.cpp  TeleportCommand.h  TestCommand.cpp  TestCommand.h
Infernus/Client/Hooks/: Actor.h  ClientInstance.h  GameMode.h  KeyItem.h  LoopbackPacketSender.h  MouseItem.h  RenderContext.h
Infernus/Client/Modules/: AirJump.cpp  ArrayList.cpp  ArrayList.h  Arraylol.cpp  Arraylol.h  AutoSprint.cpp  AutoWalk.cpp  AutoWalk.h  ClickTP.cpp  ClickTP.h  Clickgui.cpp  Clickgui.h  CubecraftFly.cpp  CubecraftFly.h  DVDScreensaver.cpp  DVDScreensaver.h  FastPlace.cpp  FastPlace.h  FightBot.cpp  FightBot.h  Fly.cpp  Fly.h  Freecam.cpp  Freecam.h  GameMode.cpp  GameMode.h  Hitbox.cpp  HiveDisabler.cpp  HiveDisabler.h  HiveDisablerxd.cpp  HiveDisablerxd.h  HudStuff.cpp  HudStuff.h  InventoryMove.cpp  InventoryMove.h  Jesus.cpp  Jetpack.cpp  Jetpack.h  Keystrokes.cpp  Keystrokes.h  (+28 more)
Infernus/Other/: Module.cpp  Module.h  Utils.cpp  Utils.h
Infernus/SDK/Classes/: Actor.h  BlockLegacy.h  ClientInstance.h  LocalPlayer.h  LoopbackPacketSender.h  MultiPlayerLevel.h  Packet.h
